[gd_scene load_steps=22 format=3 uid="uid://ch7lf51jvg2rm"]

[ext_resource type="Script" path="res://src/ui/tool_row.gd" id="1_512rv"]
[ext_resource type="Shader" uid="uid://ck48osohs7wu0" path="res://assest/shader/icon_color.tres" id="2_0762g"]
[ext_resource type="Texture2D" uid="uid://5ffk3v31dsnj" path="res://assest/icon/ui/star.svg" id="3_ak6br"]
[ext_resource type="Texture2D" uid="uid://cdwd33scbyo31" path="res://assest/icon/ui/server.svg" id="4_jhq6v"]
[ext_resource type="Texture2D" uid="uid://bk3rb53d5kty5" path="res://assest/icon/ui/copy.svg" id="5_63rop"]
[ext_resource type="Script" path="res://src/ui/ButtonHoverLight.gd" id="6_umbig"]
[ext_resource type="Texture2D" uid="uid://c8x2asku6olfm" path="res://assest/icon/ui/play-circle.svg" id="7_n8vmy"]
[ext_resource type="Texture2D" uid="uid://c32uutsip2qy" path="res://assest/icon/ui/sync-alt.svg" id="8_7ejoi"]
[ext_resource type="Texture2D" uid="uid://643r4hshrhoq" path="res://assest/icon/ui/globe.svg" id="9_ho33w"]
[ext_resource type="Texture2D" uid="uid://bbco4i4yfh80u" path="res://assest/icon/ui/edit.svg" id="10_g4k0q"]
[ext_resource type="Texture2D" uid="uid://c7ku2eye7vga5" path="res://assest/icon/ui/folder-open.svg" id="11_4br5y"]
[ext_resource type="Texture2D" uid="uid://bhyrtvwe5ogxr" path="res://assest/icon/ui/times-circle.svg" id="12_gtcn8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2abqg"]
shader = ExtResource("2_0762g")
shader_parameter/tint_color = Color(0.972549, 0.705882, 0.294118, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l6248"]
resource_local_to_scene = true
shader = ExtResource("2_0762g")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.52549, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j5ymp"]
resource_local_to_scene = true
shader = ExtResource("2_0762g")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.52549, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ianh2"]
resource_local_to_scene = true
shader = ExtResource("2_0762g")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1p4rm"]
resource_local_to_scene = true
shader = ExtResource("2_0762g")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fsp6x"]
resource_local_to_scene = true
shader = ExtResource("2_0762g")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jmwxi"]
resource_local_to_scene = true
shader = ExtResource("2_0762g")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7d0kh"]
resource_local_to_scene = true
shader = ExtResource("2_0762g")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3dvuo"]
resource_local_to_scene = true
shader = ExtResource("2_0762g")
shader_parameter/tint_color = Color(0.258824, 0.384314, 0.529412, 1)

[node name="ToolRow" type="PanelContainer" groups=["ToolRow"]]
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_512rv")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="star" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_2abqg")
custom_minimum_size = Vector2(56, 32)
layout_mode = 2
texture = ExtResource("3_ak6br")
expand_mode = 1
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_l6248")
custom_minimum_size = Vector2(96.005, 96)
layout_mode = 2
texture = ExtResource("4_jhq6v")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="ToolTextDescContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ToolName" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Version 4.0.1 "
autowrap_mode = 3

[node name="LinkName" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Version 4.0.1 "
horizontal_alignment = 2
autowrap_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer"]
layout_mode = 2

[node name="CopyDir" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer/HBoxContainer2"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_j5ymp")
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
texture_normal = ExtResource("5_63rop")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_umbig")

[node name="Locate" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Locate at : caksjdlkajjkjasdkja"
autowrap_mode = 3

[node name="Desc" type="RichTextLabel" parent="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Locate at : caksjdlkajjkjasdkja"
fit_content = true
scroll_active = false

[node name="Container" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="TagContainer" type="FlowContainer" parent="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer/Container"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="ToolImageDescContainer" type="FlowContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 3

[node name="OpenWIthEngine" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ianh2")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Open Project With Engine"
texture_normal = ExtResource("7_n8vmy")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_umbig")

[node name="RefreshStatus" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_1p4rm")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Refresh Status"
texture_normal = ExtResource("8_7ejoi")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_umbig")

[node name="Url" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_1p4rm")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Refresh Status"
texture_normal = ExtResource("9_ho33w")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_umbig")

[node name="Edit" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_fsp6x")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Edit Project"
texture_normal = ExtResource("10_g4k0q")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_umbig")

[node name="OpenDir" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_jmwxi")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Open Project Directory"
texture_normal = ExtResource("11_4br5y")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_umbig")

[node name="Star" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_7d0kh")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Star Project"
texture_normal = ExtResource("3_ak6br")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_umbig")
is_toggle = true

[node name="Delete" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer3/GridContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_3dvuo")
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Delete Project"
texture_normal = ExtResource("12_gtcn8")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_umbig")

[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/ToolTextDescContainer/HBoxContainer2/CopyDir" to="." method="_on_copy_dir_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/OpenWIthEngine" to="." method="_on_run_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/RefreshStatus" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/Url" to="." method="_on_url_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/OpenDir" to="." method="_on_open_dir_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/Star" to="." method="_on_star_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/GridContainer/Delete" to="." method="_on_delete_pressed"]
